logs/dag_id=my_second_dag/run_id=manual__2023-01-27T17:30:06.024874+00:00/task_id=save_new_data/attempt=1.log
[2023-01-27T17:30:07.118+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: my_second_dag.save_new_data manual__2023-01-27T17:30:06.024874+00:00 [queued]>
[2023-01-27T17:30:07.130+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: my_second_dag.save_new_data manual__2023-01-27T17:30:06.024874+00:00 [queued]>
[2023-01-27T17:30:07.130+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-01-27T17:30:07.130+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-01-27T17:30:07.130+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-01-27T17:30:07.144+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): save_new_data> on 2023-01-27 17:30:06.024874+00:00
[2023-01-27T17:30:07.149+0000] {standard_task_runner.py:55} INFO - Started process 1053 to run task
[2023-01-27T17:30:07.152+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'my_second_dag', 'save_new_data', 'manual__2023-01-27T17:30:06.024874+00:00', '--job-id', '5', '--raw', '--subdir', 'DAGS_FOLDER/dag2.py', '--cfg-path', '/tmp/tmpmjv8ven3']
[2023-01-27T17:30:07.152+0000] {standard_task_runner.py:83} INFO - Job 5: Subtask save_new_data
[2023-01-27T17:30:07.221+0000] {task_command.py:388} INFO - Running <TaskInstance: my_second_dag.save_new_data manual__2023-01-27T17:30:06.024874+00:00 [running]> on host 9763ece73850
[2023-01-27T17:30:07.299+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=my_second_dag
AIRFLOW_CTX_TASK_ID=save_new_data
AIRFLOW_CTX_EXECUTION_DATE=2023-01-27T17:30:06.024874+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-01-27T17:30:06.024874+00:00
[2023-01-27T17:30:07.300+0000] {sql.py:254} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS dag_runs (
                dt date, 
                dag_id character varying,
                PRIMARY KEY (dt, dag_id)
            
          
[2023-01-27T17:30:07.308+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-01-27T17:30:07.496+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-01-27T17:30:07.499+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS dag_runs (
                dt date, 
                dag_id character varying,
                PRIMARY KEY (dt, dag_id)
            
          , parameters: None
[2023-01-27T17:30:07.500+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 7:           
                  ^

[2023-01-27T17:30:07.507+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=my_second_dag, task_id=save_new_data, execution_date=20230127T173006, start_date=20230127T173007, end_date=20230127T173007
[2023-01-27T17:30:07.518+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 5 for task save_new_data (syntax error at end of input
LINE 7:           
                  ^
; 1053)
[2023-01-27T17:30:07.526+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-01-27T17:30:07.542+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
